Update coupled line coupler configurations and add new lumped coupled line couplers
- Changed the DDS file name for the open history to point to the new lumped coupled line couplers.
- Updated the de_sim configuration to include new schematic files for lumped coupled line couplers.
- Added a new DDS file for lumped coupled line couplers with detailed plot configurations and traces.
- Modified the netlist log to reflect the new top design for lumped coupled line couplers.
- Created a new workspace file to include the new lumped coupled line couplers and associated configurations.

--- a/de_sim.cfg
+++ b/de_sim.cfg
@@ -8,3 +8,5 @@ VIA_CONFIG_PATH={%DESIGN_KIT_VIA_CONFIG_PATH}
 DESIGN_KIT_VIA_CONFIG_PATH=
 LAST_LIBRARY_SELECTED=coupled-line-coupler_lib
 SCHEM_FILE_OPEN_HISTORY_1=coupled-line-coupler_lib:ideal_coupled_line_couplers:schematic
+SCHEM_FILE_OPEN_HISTORY_2=coupled-line-coupler_lib:lumped_coupled_line_couplers:schematic
+SCHEM_FILE_OPEN_HISTORY_3=coupled-line-coupler_lib:lumped_line:schematic
