--- a/de_sim.cfg
+++ b/de_sim.cfg
@@ -10,3 +10,4 @@ LAST_LIBRARY_SELECTED=coupled-line-coupler_lib
 SCHEM_FILE_OPEN_HISTORY_1=coupled-line-coupler_lib:ideal_coupled_line_couplers:schematic
 SCHEM_FILE_OPEN_HISTORY_2=coupled-line-coupler_lib:lumped_coupled_line_couplers:schematic
 SCHEM_FILE_OPEN_HISTORY_3=coupled-line-coupler_lib:lumped_line:schematic
+LAYOUT_FILE_OPEN_HISTORY_1=coupled-line-coupler_lib:lumped_coupled_line_couplers:layout
